--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "dependencies": {
     "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "joi": "^17.4.2",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "sequelize": "^6.25.4"
   },
   "engines": {
     "node": "14.x"
